# learn-rust

./: hello
advanced_features/src/: main.rs
advanced_features/src/advanced_functions/: advanced_functions.rs  mod.rs
advanced_features/src/advanced_traits/: advanced_traits.rs  mod.rs
advanced_features/src/advanced_types/: advanced_types.rs  mod.rs
advanced_features/src/macros/: macros.rs
advanced_features/src/unsafe_rust/: unsafe_rust.rs
leetcode_problems/: Cargo.toml
leetcode_problems/src/: format.rs  main.rs
leetcode_problems/src/problems/: add_two_numbers_2.rs  mod.rs
managing_project/: Cargo.toml
managing_project/restaurant/src/: lib.rs
managing_project/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
other_features/: Cargo.toml
other_features/src/: main.rs
try_axum/: Cargo.toml
try_axum/src/: main.rs
try_axum/src/routes/: mod.rs  router.rs
try_axum/src/routes/test/: calculate.rs  hello_world.rs  mod.rs  test_router.rs
try_axum/src/routes/test1/: mod.rs  test1_router.rs
try_axum/src/utilities/: handle_error.rs
try_egui/: Cargo.toml
try_egui/src/: main.rs
try_ml/: Cargo.toml
try_sled/: Cargo.toml
try_sled/db/: db  snap.00000000000002B2  snap.000000000000032F  snap.0000000000000476  snap.00000000000005CD
try_sled/src/: main.rs  sled_basic.rs  sled_structured.rs
try_test/: Cargo.toml
try_test/src/: lib.rs
try_test/tests/: integration_test.rs
understanding_ownership/src/: main.rs  try_enums.rs  try_match.rs  try_struct.rs
web_server/: 404.html  hello.html
web_server/src/: main.rs
(+19 files in other folders)
